policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: reject-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: an image tag of latest is refused
        pattern:
          spec:
            containers:
              - image: "!*:latest"
